# obsidian-ocr

./: .gitignore  README.md  esbuild.config.mjs  flake.nix  justfile  package-lock.json  package.json  tsconfig.json
obsidian-plugin/: check-ocr.ts  cli.ts  esbuild.config.mjs  eslint.config.mjs  manifest.json  package-lock.json  package.json  vitest.config.ts
obsidian-plugin/scripts/: test-ocr.ts
obsidian-plugin/src/: main.ts  ocr.ts  pdf-converter.ts  preprocessing.ts  prompt.ts  settings.ts  watcher.ts
obsidian-plugin/src/providers/: anthropic.ts  base.ts  ollama.ts  openai.ts
obsidian-plugin/tests/: normalize-latex.test.ts  ocr-file.test.ts  pdf-converter.test.ts  preprocessing-worker.test.ts  preprocessing.test.ts  providers.test.ts  watcher.test.ts
obsidian-plugin/tests/__mocks__/: obsidian.ts
ocr-cli/: pyproject.toml
ocr-cli/src/ocr_cli/: __init__.py  cli.py  config.py  pdf.py  postprocessing.py  preprocessing.py  prompt.py
ocr-cli/src/ocr_cli/providers/: anthropic.py  base.py  openai.py
ocr-cli/tests/: conftest.py  test_cli.py  test_config.py  test_pdf.py  test_postprocessing.py  test_preprocessing.py  test_prompt.py  test_providers.py
scripts/: check-ocr.ts  cli.ts
src/core/: ocr.ts  postprocessing.ts  preprocessing.ts  preprocessing.worker.ts  prompt.ts
src/core/providers/: anthropic.ts  base.ts  ollama.ts  (+1 more)
src/plugin/: main.ts  settings-tab.ts  settings.ts  watcher.ts
tests/: normalize-latex.test.ts  ocr-file.test.ts  pdf-converter.test.ts  preprocessing-worker.test.ts  preprocessing.test.ts  providers.test.ts  watcher.test.ts
